# filigram-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: crosscompile.yml  rust.yml
examples/: filigram.rs
src/: config.rs  error.rs  graphics.rs  lib.rs  main.rs  rules.rs
tests/: processing.rs
