[package]
name = "filigram-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9"
indicatif = "0.16"
image = "0.24"
# waiting for new release
# imageproc = "0.23"
imageproc = { git = "https://github.com/image-rs/imageproc.git" }
log = "0.4"
rayon = "1.5"
rusttype = "0.9"
thiserror = "1.0"
walkdir = "2.3"
